# WSLDroid

./: CMakeLists.txt  compile_commands.json  installer.iss
.github/workflows/: build-kernel.yml
android-tools/: CMakeLists.txt  README.md  build.ps1  resources.qrc
android-tools/resources/: app.rc
android-tools/src/: main.cpp  mainwindow.cpp  mainwindow.h  phoneframe.cpp  phoneframe.h  rdpclient.cpp  rdpscreen.cpp  rdpscreen.h  readconfig.cpp  readconfig.h  toolbutton.cpp  toolbutton.h
app/: CMakeLists.txt
app/src/: main.cpp  mainwindow.cpp  mainwindow.h
config/: weston.ini
emulator/: README.md  compile_commands.json  copy_dlls.ps1
emulator/src/: main.cpp  rdpclient.h  rdpscreen.cpp
icons/: concept.cdr
scripts/: README.md  start-waydroid.sh  start-weston.sh
src/: README.md
